--- a/src/cristal/tresorerie/view/BudgetInvestissements.fxml
+++ b/src/cristal/tresorerie/view/BudgetInvestissements.fxml
@@ -1,50 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Investissements Programmés">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Label layoutX="33.0" layoutY="44.0" text="Acquisition de terrains, immeubles, fonds de commerce:" />
-                        <Label layoutX="33.0" layoutY="118.0" text="Achat de matériels (engins &amp; machines):" />
-                        <Label layoutX="33.0" layoutY="186.0" text="Besoin de trésorerie supplémentaire:" />
-                        <TextField layoutX="404.0" layoutY="39.0" />
-                        <TextField layoutX="404.0" layoutY="113.0" />
-                        <TextField layoutX="404.0" layoutY="181.0" />
-                        <Button layoutX="529.0" layoutY="334.0" mnemonicParsing="false" text="Suivant" />
-                        <Label layoutX="33.0" layoutY="257.0" text="Provisions pour dépenses imprévues:" />
-                        <TextField layoutX="404.0" layoutY="252.0" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-            <Tab text="Financement">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Label layoutX="48.0" layoutY="64.0" text="Prévoyez-vous une augmentation de capital?" />
-                        <RadioButton layoutX="386.0" layoutY="63.0" mnemonicParsing="false" text="Oui" />
-                        <RadioButton layoutX="495.0" layoutY="63.0" mnemonicParsing="false" text="Non" />
-                        <Label layoutX="48.0" layoutY="104.0" text="Si oui, saisissez le montant:" />
-                        <TextField layoutX="246.0" layoutY="99.0" />
-                        <Label layoutX="48.0" layoutY="204.0" text="Prévoyez-vous l'obtention de subventions?" />
-                        <RadioButton layoutX="386.0" layoutY="203.0" mnemonicParsing="false" text="Oui" />
-                        <RadioButton layoutX="495.0" layoutY="203.0" mnemonicParsing="false" text="Non" />
-                        <Label layoutX="48.0" layoutY="249.0" text="Si oui, saisissez le montant:" />
-                        <TextField layoutX="246.0" layoutY="244.0" />
-                        <Button layoutX="528.0" layoutY="334.0" mnemonicParsing="false" text="Suivant" />
-                        <Button layoutX="441.0" layoutY="334.0" mnemonicParsing="false" text="Précédent" />
-                     </children></AnchorPane>
-              </content>
-            </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-</Pane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+  <tabs>
+      <Tab text="Budget des investissements">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="881.0" layoutY="35.0" styleClass="myLabel" text="1. Informations de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="82.0" styleClass="myLabel" text="2. Valeur de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="132.0" styleClass="myLabel" text="3. Dettes et créances" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="178.0" styleClass="myLabel" text="4. Achats et factures" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="223.0" styleClass="myLabel" text="5. Ventes et activité exceptionnelle" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="271.0" styleClass="myLabel" text="6. Personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="323.0" styleClass="myLabel" text="7. Services extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="378.0" styleClass="myLabel" text="8. Budget ventes" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="429.0" styleClass="myLabel" text="9. Budget achats" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="483.0" styleClass="myLabel" text="10. Budget personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="537.0" styleClass="myLabel" text="11. Budget investissements" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="587.0" styleClass="myLabel" text="11. Budget frais extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="637.0" styleClass="myLabel" text="12. Budget Exceptionnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="885.0" layoutY="688.0" styleClass="myLabel" text="13. Budget gestion financière" />
+                  <Button layoutX="644.0" layoutY="708.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                  <TextField layoutX="419.0" layoutY="293.0" />
+                  <Label layoutX="48.0" layoutY="298.0" text="Provisions pour dépenses imprévues:" AnchorPane.leftAnchor="70.0" />
+                  <TextField layoutX="419.0" layoutY="222.0" />
+                  <TextField layoutX="419.0" layoutY="154.0" />
+                  <TextField layoutX="419.0" layoutY="80.0" />
+                  <Label layoutX="48.0" layoutY="227.0" text="Besoin de trésorerie supplémentaire:" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="48.0" layoutY="159.0" text="Achat de matériels (engins &amp; machines):" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="48.0" layoutY="85.0" text="Acquisition de terrains, immeubles, fonds de commerce:" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="62.0" layoutY="27.0" styleClass="myLabel" text="INVESTISSEMENTS PROGRAMMES" AnchorPane.leftAnchor="70.0" />
+                  <TextField layoutX="423.0" layoutY="641.0" AnchorPane.leftAnchor="423.0" />
+                  <Label layoutX="74.0" layoutY="646.0" text="Si oui, saisissez le montant:" AnchorPane.leftAnchor="74.0" />
+                  <RadioButton layoutX="541.0" layoutY="599.0" mnemonicParsing="false" text="Non" AnchorPane.leftAnchor="541.0" />
+                  <RadioButton layoutX="432.0" layoutY="599.0" mnemonicParsing="false" text="Oui" AnchorPane.leftAnchor="432.0" />
+                  <Label layoutX="74.0" layoutY="601.0" text="Prévoyez-vous l'obtention de subventions?" AnchorPane.leftAnchor="74.0" />
+                  <TextField layoutX="423.0" layoutY="496.0" AnchorPane.leftAnchor="423.0" />
+                  <Label layoutX="74.0" layoutY="501.0" text="Si oui, saisissez le montant:" AnchorPane.leftAnchor="74.0" />
+                  <RadioButton layoutX="541.0" layoutY="461.0" mnemonicParsing="false" text="Non" AnchorPane.leftAnchor="541.0" />
+                  <RadioButton layoutX="432.0" layoutY="461.0" mnemonicParsing="false" text="Oui" AnchorPane.leftAnchor="432.0" />
+                  <Label layoutX="74.0" layoutY="461.0" text="Prévoyez-vous une augmentation de capital?" AnchorPane.leftAnchor="74.0" />
+                  <Label layoutX="88.0" layoutY="386.0" styleClass="myLabel" text="FINANCEMENT" AnchorPane.leftAnchor="70.0" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+  </tabs>
+</TabPane>
