--- a/src/cristal/tresorerie/view/BudgetPersonnel.fxml
+++ b/src/cristal/tresorerie/view/BudgetPersonnel.fxml
@@ -1,77 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TabPane layoutY="-1.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab styleClass="myTab" text="Mes employés">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <TableView layoutX="5.0" layoutY="8.0" prefHeight="311.0" prefWidth="590.0" styleClass="myTableView">
-                          <columns>
-                            <TableColumn prefWidth="113.0" styleClass="myTableColumn" text="Type de contrat" />
-                            <TableColumn prefWidth="92.0" styleClass="myTableColumn" text="Nom" />
-                              <TableColumn prefWidth="134.0" styleClass="myTableColumn" text="Salaire brut annuel" />
-                              <TableColumn minWidth="0.0" prefWidth="107.0" styleClass="myTableColumn" text="Commissions" />
-                              <TableColumn prefWidth="143.0" text="Nombre d'employés" />
-                          </columns>
-                        </TableView>
-                        <Button layoutX="523.0" layoutY="334.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
-                        <Button layoutX="429.0" layoutY="334.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
-                        <Button layoutX="28.0" layoutY="334.0" mnemonicParsing="false" text="Modifier" />
-                        <Button layoutX="106.0" layoutY="334.0" mnemonicParsing="false" text="Suppprimer" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab styleClass="myTab" text="Embaucher un employé">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Button layoutX="24.0" layoutY="128.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Ajouter" />
-                        <Label layoutX="189.0" layoutY="67.0" styleClass="myLabel" text="Nom du poste:" />
-                        <Label layoutX="189.0" layoutY="159.0" styleClass="myLabel" text="Salaire brut annuel (partie fixe):" />
-                        <Label layoutX="191.0" layoutY="216.0" styleClass="myLabel" text="Ce poste perçoit-il des commissions?" />
-                        <Label layoutX="191.0" layoutY="277.0" styleClass="myLabel" text="Si oui, saisissez le pourcentage:" />
-                        <TextField layoutX="413.0" layoutY="62.0" styleClass="myTextField" />
-                        <TextField layoutX="413.0" layoutY="154.0" styleClass="myTextField" />
-                        <RadioButton layoutX="460.0" layoutY="207.0" mnemonicParsing="false" styleClass="myRadioButton" text="Oui" />
-                        <RadioButton layoutX="460.0" layoutY="237.0" mnemonicParsing="false" styleClass="myRadioButton" text="Non" />
-                        <Slider layoutX="427.0" layoutY="277.0" styleClass="mySlider" value="5.0" />
-                        <Button layoutX="523.0" layoutY="333.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
-                        <Label layoutX="189.0" layoutY="19.0" styleClass="myLabel" text="Type de contrat:" />
-                        <ComboBox editable="true" layoutX="420.0" layoutY="14.0" prefWidth="150.0" promptText="Choisissez" styleClass="myComboBox" />
-                        <Label layoutX="189.0" layoutY="112.0" text="Nombre d'employés à ce poste:" />
-                        <TextField layoutX="413.0" layoutY="107.0" />
-                        <Label layoutX="189.0" layoutY="176.0" text="(Intérim: montant versé à la société)" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-            <Tab styleClass="myTab" text="Charges de Personnel &amp; Dépenses associées">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Label layoutX="34.0" layoutY="21.0" styleClass="myLabel" text="Montant prévisionnel des charges sociales (liées aux salaires, congés payés etc):" />
-                        <Label layoutX="34.0" layoutY="94.0" styleClass="myLabel" text="Montant prévisionnel des charges patronales (URSSAF, mutuelles, retraites etc):" />
-                        <TextField layoutX="375.0" layoutY="44.0" styleClass="myTextField" />
-                        <TextField layoutX="375.0" layoutY="118.0" styleClass="myTextField" />
-                        <Label layoutX="34.0" layoutY="168.0" styleClass="myLabel" text="Frais prévisionnels de déplacements pour mission des employés (transports, hotels etc):" />
-                        <TextField layoutX="375.0" layoutY="193.0" styleClass="myTextField" />
-                        <Button layoutX="528.0" layoutY="334.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
-                        <Button layoutX="436.0" layoutY="334.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
-                        <Label layoutX="34.0" layoutY="238.0" styleClass="myLabel" text="Impots sur salaires et versements assimilés:" />
-                        <TextField layoutX="375.0" layoutY="260.0" styleClass="myTextField" />
-                     </children>
-                  </AnchorPane>
-              </content>
-            </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-</Pane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+  <tabs>
+      <Tab text="Mes Employés">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Button layoutX="70.0" layoutY="127.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Modifier" AnchorPane.bottomAnchor="594.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="1050.0" AnchorPane.topAnchor="127.0" />
+                  <Button layoutX="68.0" layoutY="209.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Supprimer" AnchorPane.bottomAnchor="512.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="1050.0" AnchorPane.topAnchor="209.0" />
+                  <Button layoutX="67.0" layoutY="55.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="80.0" styleClass="myButton" text="Ajouter" AnchorPane.bottomAnchor="666.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="1052.0" AnchorPane.topAnchor="55.0" />
+                  <Label layoutX="279.0" layoutY="46.0" styleClass="myLabel" text="Type de contrat:" AnchorPane.leftAnchor="279.0" />
+                  <Label layoutX="279.0" layoutY="91.0" styleClass="myLabel" text="Nom du poste:" AnchorPane.leftAnchor="279.0" />
+                  <Label layoutX="279.0" layoutY="136.0" styleClass="myLabel" text="Salaire brut annuel (partie fixe):" AnchorPane.leftAnchor="279.0" />
+                  <ComboBox editable="true" layoutX="543.0" layoutY="43.0" prefWidth="150.0" promptText="Choisissez" styleClass="myComboBox" AnchorPane.leftAnchor="543.0" />
+                  <TextField layoutX="536.0" layoutY="84.0" styleClass="myTextField" AnchorPane.leftAnchor="536.0" />
+                  <TextField layoutX="536.0" layoutY="130.0" styleClass="myTextField" AnchorPane.leftAnchor="536.0" />
+                  <TableView layoutX="74.0" layoutY="344.0" prefHeight="337.0" prefWidth="636.0">
+                    <columns>
+                      <TableColumn prefWidth="110.69721221923828" text="Type de contrat" />
+                      <TableColumn prefWidth="125.77474975585938" text="Nom du poste" />
+                        <TableColumn prefWidth="137.007080078125" text="Salaire brut annuel" />
+                        <TableColumn prefWidth="111.93670654296875" text="Commissions" />
+                        <TableColumn prefWidth="151.0633544921875" text="Nombre d'employés" />
+                    </columns>
+                  </TableView>
+                  <Label layoutX="81.0" layoutY="291.0" styleClass="myLabel" text="Tableau récapitulatif:" />
+                  <Label layoutX="881.0" layoutY="35.0" styleClass="myLabel" text="1. Informations de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="82.0" styleClass="myLabel" text="2. Valeur de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="132.0" styleClass="myLabel" text="3. Dettes et créances" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="178.0" styleClass="myLabel" text="4. Achats et factures" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="223.0" styleClass="myLabel" text="5. Ventes et activité exceptionnelle" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="271.0" styleClass="myLabel" text="6. Personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="323.0" styleClass="myLabel" text="7. Services extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="378.0" styleClass="myLabel" text="8. Budget ventes" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="429.0" styleClass="myLabel" text="9. Budget achats" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="483.0" styleClass="myLabel" text="10. Budget personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="537.0" styleClass="myLabel" text="11. Budget investissements" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="587.0" styleClass="myLabel" text="11. Budget frais extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="637.0" styleClass="myLabel" text="12. Budget Exceptionnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="885.0" layoutY="688.0" styleClass="myLabel" text="13. Budget gestion financière" />
+                  <Button layoutX="644.0" layoutY="708.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                  <Button layoutX="544.0" layoutY="708.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
+                  <Label layoutX="279.0" layoutY="156.0" styleClass="myLabel" text="(si Intérim: montant versé à la société)" />
+                  <Label layoutX="279.0" layoutY="194.0" styleClass="myLabel" text="Commissions sur les ventes (%):" />
+                  <Slider layoutX="549.0" layoutY="194.0" showTickLabels="true" showTickMarks="true" />
+                  <Label layoutX="279.0" layoutY="248.0" styleClass="myLabel" text="Nombre d'employés:" />
+                  <TextField layoutX="536.0" layoutY="251.0" styleClass="myTextField" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Charges de personnel &amp; Dépenses associées">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="881.0" layoutY="35.0" styleClass="myLabel" text="1. Informations de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="82.0" styleClass="myLabel" text="2. Valeur de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="132.0" styleClass="myLabel" text="3. Dettes et créances" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="178.0" styleClass="myLabel" text="4. Achats et factures" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="223.0" styleClass="myLabel" text="5. Ventes et activité exceptionnelle" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="271.0" styleClass="myLabel" text="6. Personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="323.0" styleClass="myLabel" text="7. Services extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="378.0" styleClass="myLabel" text="8. Budget ventes" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="429.0" styleClass="myLabel" text="9. Budget achats" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="483.0" styleClass="myLabel" text="10. Budget personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="537.0" styleClass="myLabel" text="11. Budget investissements" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="587.0" styleClass="myLabel" text="11. Budget frais extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="637.0" styleClass="myLabel" text="12. Budget Exceptionnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="885.0" layoutY="688.0" styleClass="myLabel" text="13. Budget gestion financière" />
+                  <Button layoutX="644.0" layoutY="708.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                  <Button layoutX="544.0" layoutY="708.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
+                  <TextField layoutX="381.0" layoutY="553.0" styleClass="myTextField" />
+                  <Label layoutX="40.0" layoutY="531.0" styleClass="myLabel" text="Impots sur salaires et versements assimilés:" AnchorPane.leftAnchor="70.0" />
+                  <TextField layoutX="385.0" layoutY="453.0" styleClass="myTextField" />
+                  <Label layoutX="44.0" layoutY="428.0" styleClass="myLabel" text="Frais prévisionnels de déplacements pour mission des employés (transports, hotels etc):" AnchorPane.leftAnchor="70.0" />
+                  <TextField layoutX="381.0" layoutY="339.0" styleClass="myTextField" />
+                  <TextField layoutX="378.0" layoutY="239.0" styleClass="myTextField" />
+                  <Label layoutX="40.0" layoutY="315.0" styleClass="myLabel" text="Montant prévisionnel des charges patronales (URSSAF, mutuelles, retraites etc):" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="88.0" layoutY="214.0" styleClass="myLabel" text="Montant prévisionnel des charges sociales (liées aux salaires, congés payés etc):" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="157.0" layoutY="139.0" text="BUDGET DE CHARGES DE PERSONNEL:" AnchorPane.leftAnchor="70.0" />
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+  </tabs>
+</TabPane>
