--- a/src/cristal/tresorerie/view/InformationsEntreprise.fxml
+++ b/src/cristal/tresorerie/view/InformationsEntreprise.fxml
@@ -1,66 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TabPane layoutY="-1.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Type">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Label layoutX="57.0" layoutY="44.0" prefHeight="22.0" prefWidth="127.0" styleClass="myLabel" text="Nombre d'employés:" />
-                        <TextField layoutX="267.0" layoutY="42.0" prefHeight="26.0" prefWidth="66.0" styleClass="myTextField" />
-                        <Label layoutX="58.0" layoutY="153.0" styleClass="myLabel" text="Chiffre d'affaires:" />
-                        <RadioButton layoutX="235.0" layoutY="112.0" mnemonicParsing="false" styleClass="myRadioButton" text="&lt;2 Millions €" />
-                        <RadioButton layoutX="235.0" layoutY="152.0" mnemonicParsing="false" styleClass="myRadioButton" text="Entre 2 Millions et 20 Millions €" />
-                        <RadioButton layoutX="235.0" layoutY="191.0" mnemonicParsing="false" styleClass="myRadioButton" text="&gt; 20 Millions €" />
-                        <DatePicker layoutX="267.0" layoutY="261.0" styleClass="myDatePicker" />
-                        <Label layoutX="58.0" layoutY="266.0" styleClass="myLabel" text="Date de Création" />
-                        <Button layoutX="523.0" layoutY="327.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-            <Tab text="Activité">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Button layoutX="422.0" layoutY="327.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" />
-                        <Button layoutX="523.0" layoutY="327.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
-                        <Label layoutX="62.0" layoutY="46.0" styleClass="myLabel" text="Production de:" />
-                        <Label layoutX="216.0" layoutY="184.0" styleClass="myLabel" text="Production linéaire?" />
-                        <RadioButton layoutX="260.0" layoutY="218.0" mnemonicParsing="false" styleClass="myRadioButton" text="Oui" />
-                        <RadioButton layoutX="260.0" layoutY="255.0" mnemonicParsing="false" styleClass="myRadioButton" text="Non" />
-                        <RadioButton layoutX="391.0" layoutY="116.0" mnemonicParsing="false" styleClass="myRadioButton" text="Non" />
-                        <RadioButton layoutX="391.0" layoutY="81.0" mnemonicParsing="false" styleClass="myRadioButton" text="Oui" />
-                        <Label layoutX="334.0" layoutY="46.0" styleClass="myLabel" text="Production à flux tendus? (pas de stock)" />
-                        <CheckBox layoutX="107.0" layoutY="81.0" mnemonicParsing="false" styleClass="myCheckBox" text="Biens" />
-                        <CheckBox layoutX="107.0" layoutY="116.0" mnemonicParsing="false" styleClass="myCheckBox" text="Services" />
-                     </children>
-                  </AnchorPane>
-              </content>
-            </Tab>
-            <Tab text="Délais">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <Button layoutX="523.0" layoutY="327.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" textAlignment="CENTER" />
-                        <Button layoutX="427.0" layoutY="327.0" mnemonicParsing="false" styleClass="myButton" text="Précédent" textAlignment="CENTER" />
-                        <Label layoutX="59.0" layoutY="39.0" styleClass="myLabel" text="Délai de règlement des fournisseurs:" />
-                        <Slider layoutX="167.0" layoutY="93.0" max="90.0" showTickLabels="true" showTickMarks="true" styleClass="mySlider" value="45.0" />
-                        <Label layoutX="333.0" layoutY="93.0" styleClass="myLabel" text="(en nombre de jours)" />
-                        <Slider layoutX="167.0" layoutY="238.0" max="90.0" showTickLabels="true" showTickMarks="true" styleClass="mySlider" value="45.0" />
-                        <Label layoutX="333.0" layoutY="238.0" styleClass="myLabel" text="(en nombre de jours)" />
-                        <Label layoutX="59.0" layoutY="184.0" styleClass="myLabel" text="Délai de paiement des clients" />
-                     </children>
-                  </AnchorPane>
-              </content>
-            </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-</Pane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+  <tabs>
+      <Tab styleClass="myTab" text="Informations Entreprise">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="881.0" layoutY="35.0" styleClass="myLabel" text="1. Informations de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="82.0" styleClass="myLabel" text="2. Valeur de l'entreprise" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="132.0" styleClass="myLabel" text="3. Dettes et créances" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="178.0" styleClass="myLabel" text="4. Achats et factures" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="223.0" styleClass="myLabel" text="5. Ventes et activité exceptionnelle" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="271.0" styleClass="myLabel" text="6. Personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="323.0" styleClass="myLabel" text="7. Services extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="378.0" styleClass="myLabel" text="8. Budget ventes" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="429.0" styleClass="myLabel" text="9. Budget achats" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="483.0" styleClass="myLabel" text="10. Budget personnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="537.0" styleClass="myLabel" text="11. Budget investissements" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="587.0" styleClass="myLabel" text="11. Budget frais extérieurs" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="881.0" layoutY="637.0" styleClass="myLabel" text="12. Budget Exceptionnel" AnchorPane.leftAnchor="881.0" />
+                  <Label layoutX="885.0" layoutY="688.0" styleClass="myLabel" text="13. Budget gestion financière" />
+                  <Button layoutX="644.0" layoutY="708.0" mnemonicParsing="false" styleClass="myButton" text="Suivant" />
+                  <Label layoutX="92.0" layoutY="57.0" styleClass="myLabel" text="Nombre d'employés" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="95.0" layoutY="108.0" styleClass="myLabel" text="Chiffre d'affaires" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="70.0" layoutY="223.0" styleClass="myLabel" text="Date de création" AnchorPane.leftAnchor="70.0" />
+                  <RadioButton layoutX="256.0" layoutY="107.0" mnemonicParsing="false" styleClass="myRadioButton" text="&lt;2 millions €" />
+                  <RadioButton layoutX="256.0" layoutY="131.0" mnemonicParsing="false" styleClass="myRadioButton" text="Entre 2 et 20 millions €" />
+                  <RadioButton layoutX="256.0" layoutY="157.0" mnemonicParsing="false" styleClass="myRadioButton" text="&gt;20 millions €" />
+                  <DatePicker layoutX="256.0" layoutY="219.0" styleClass="myDatePicker" />
+                  <TextField layoutX="253.0" layoutY="52.0" styleClass="myTextField" />
+                  <Label layoutX="89.0" layoutY="288.0" styleClass="myLabel" text="Production de" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="89.0" layoutY="387.0" styleClass="myLabel" text="Production linéaire ?" AnchorPane.leftAnchor="70.0" />
+                  <CheckBox layoutX="258.0" layoutY="288.0" mnemonicParsing="false" styleClass="myCheckBox" text="Biens" />
+                  <CheckBox layoutX="256.0" layoutY="323.0" mnemonicParsing="false" styleClass="myCheckBox" text="Services" />
+                  <RadioButton layoutX="382.0" layoutY="387.0" mnemonicParsing="false" styleClass="myRadioButton" text="Oui" />
+                  <RadioButton layoutX="578.0" layoutY="387.0" mnemonicParsing="false" styleClass="myRadioButton" text="Non" />
+                  <Label layoutX="70.0" layoutY="554.0" styleClass="myLabel" text="Délai de règlement des fournisseurs" AnchorPane.leftAnchor="70.0" />
+                  <Label layoutX="90.0" layoutY="620.0" styleClass="myLabel" text="Délai de paiement des clients" AnchorPane.leftAnchor="70.0" />
+                  <Slider layoutX="320.0" layoutY="556.0" max="90.0" showTickLabels="true" showTickMarks="true" styleClass="mySlider" value="45.0" AnchorPane.leftAnchor="320.0" />
+                  <Slider layoutX="328.0" layoutY="610.0" max="90.0" showTickLabels="true" showTickMarks="true" styleClass="mySlider" value="30.0" AnchorPane.leftAnchor="320.0" />
+                  <Label layoutX="567.0" layoutY="554.0" styleClass="myLabel" text="(en nombre de jours)" AnchorPane.leftAnchor="567.0" />
+                  <Label layoutX="567.0" layoutY="620.0" styleClass="myLabel" text="(en nombre de jours)" AnchorPane.leftAnchor="567.0" />
+                  <Label layoutX="92.0" layoutY="438.0" styleClass="myLabel" text="Production flux tendus ?" AnchorPane.leftAnchor="70.0" />
+                  <RadioButton layoutX="382.0" layoutY="438.0" mnemonicParsing="false" styleClass="myRadioButton" text="Oui" />
+                  <RadioButton layoutX="579.0" layoutY="438.0" mnemonicParsing="false" styleClass="myRadioButton" text="Non" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+  </tabs>
+</TabPane>
